Rename subsidiaries to other_facilities (contains headquarters too)
