# docs/openapi.yaml
@@ -1,4 +1,3 @@
----
 openapi: 3.0.0
 info:
   title: API du service A Dock
@@ -14,18 +13,18 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-- url: https://virtserver.swaggerhub.com/stephaner/adock/1.0.0
-- url: http://virtserver.swaggerhub.com/stephaner/adock/1.0.0
+  - url: https://virtserver.swaggerhub.com/stephaner/adock/1.0.0
+  - url: http://virtserver.swaggerhub.com/stephaner/adock/1.0.0
 tags:
-- name: carriers
-  description: Recherche et modification des fiches transporteurs
-- name: meta
-  description: Meta données de l'application
+  - name: carriers
+    description: Recherche et modification des fiches transporteurs
+  - name: meta
+    description: Meta données de l'application
 paths:
   /carriers/search/:
     get:
       tags:
-      - carriers
+        - carriers
       summary: Recherche de transporteurs
       description: |
         Filtre les transporteurs selon différents critères métiers et classe les résultats selon l'ordre :
@@ -38,197 +37,197 @@ paths:
         Le but étant de fournir en priorité des entreprises locales et spécialisées.
       operationId: searchCarriers
       parameters:
-      - name: q
-        in: query
-        description: critère de recherche sur les attributs d'enseigne, code postal ou SIRET du transporteur. En séparant les critères par une virgule, il est possible d'en fournir plusieurs.
-        required: false
-        style: FORM
-        explode: true
-        schema:
-          type: string
-      - name: licence-types
-        in: query
-        description: filtre sur le type de license ('lc' pour License communautaire ou 'lti' pour License de transport intérieur)
-        required: false
-        style: FORM
-        explode: true
-        schema:
-          type: array
-          items:
+        - name: q
+          in: query
+          description: critère de recherche sur les attributs d'enseigne, code postal ou SIRET du transporteur. En séparant les critères par une virgule, il est possible d'en fournir plusieurs.
+          required: false
+          style: FORM
+          explode: true
+          schema:
             type: string
-            enum:
-            - lc
-            - lti
-      - name: departement-depart
-        in: query
-        description: le département d'enlèvement de la marchandise. Le paramètre doit être un département français valide (ex. "56")
-        required: false
-        style: FORM
-        explode: true
-        schema:
-          type: string
-      - name: departement-arrivee
-        in: query
-        description: le département de livraison de la marchandise. Le paramètre doit être un département français valide (ex. "2A")
-        required: false
-        style: FORM
-        explode: true
-        schema:
-          type: string
-      - name: specialities
-        in: query
-        description: filtre sur les transporteurs disposant de l'ensemble des spécialités demandées
-        required: false
-        style: FORM
-        explode: true
-        schema:
-          type: array
-          items:
+        - name: licence-types
+          in: query
+          description: filtre sur le type de license ('lc' pour License communautaire ou 'lti' pour License de transport intérieur)
+          required: false
+          style: FORM
+          explode: true
+          schema:
+            type: array
+            items:
+              type: string
+              enum:
+                - lc
+                - lti
+        - name: departement-depart
+          in: query
+          description: le département d'enlèvement de la marchandise. Le paramètre doit être un département français valide (ex. "56")
+          required: false
+          style: FORM
+          explode: true
+          schema:
             type: string
+        - name: departement-arrivee
+          in: query
+          description: le département de livraison de la marchandise. Le paramètre doit être un département français valide (ex. "2A")
+          required: false
+          style: FORM
+          explode: true
+          schema:
+            type: string
+        - name: specialities
+          in: query
+          description: filtre sur les transporteurs disposant de l'ensemble des spécialités demandées
+          required: false
+          style: FORM
+          explode: true
+          schema:
+            type: array
+            items:
+              type: string
       responses:
         200:
           description: recherche valide
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200'
+                $ref: "#/components/schemas/inline_response_200"
               examples:
                 carriers:
                   value:
                     results:
-                    - lti_nombre: 3
-                      adresse: 49 RUE RENE DUMONT
-                      raison_sociale: TRANSPORTS CITY ONE
-                      completeness: 55
-                      working_area: DEPARTEMENT
-                      ville: COUERON
-                      code_postal: "44220"
-                      lc_nombre: 0
-                      enseigne: TRANSPORTS CITY ONE
-                      siret: "82882108200017"
-                    - lti_nombre: 4
-                      adresse: 1 AV DES JADES
-                      raison_sociale: NAONED TRANSPORT
-                      completeness: 40
-                      working_area: DEPARTEMENT
-                      ville: NANTES
-                      code_postal: "44300"
-                      lc_nombre: 0
-                      enseigne: NAONED TRANSPORT
-                      siret: "84195743400019"
-                    - lti_nombre: 2
-                      adresse: 2 RUE AMPERE
-                      raison_sociale: STONE EXPRESS
-                      completeness: 100
-                      working_area: FRANCE
-                      ville: TRESSES
-                      code_postal: "33370"
-                      lc_nombre: 0
-                      enseigne: STONE EXPRESS
-                      siret: "82363496900013"
+                      - lti_nombre: 3
+                        adresse: 49 RUE RENE DUMONT
+                        raison_sociale: TRANSPORTS CITY ONE
+                        completeness: 55
+                        working_area: DEPARTEMENT
+                        ville: COUERON
+                        code_postal: "44220"
+                        lc_nombre: 0
+                        enseigne: TRANSPORTS CITY ONE
+                        siret: "82882108200017"
+                      - lti_nombre: 4
+                        adresse: 1 AV DES JADES
+                        raison_sociale: NAONED TRANSPORT
+                        completeness: 40
+                        working_area: DEPARTEMENT
+                        ville: NANTES
+                        code_postal: "44300"
+                        lc_nombre: 0
+                        enseigne: NAONED TRANSPORT
+                        siret: "84195743400019"
+                      - lti_nombre: 2
+                        adresse: 2 RUE AMPERE
+                        raison_sociale: STONE EXPRESS
+                        completeness: 100
+                        working_area: FRANCE
+                        ville: TRESSES
+                        code_postal: "33370"
+                        lc_nombre: 0
+                        enseigne: STONE EXPRESS
+                        siret: "82363496900013"
         400:
           description: les critères de recherche ne sont pas valides
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_400'
+                $ref: "#/components/schemas/inline_response_400"
   /carriers/{siret}:
     get:
       tags:
-      - carrier
+        - carrier
       summary: retourne les détails d'un transporteur
       operationId: getCarrierDetail
       parameters:
-      - name: siret
-        in: path
-        description: SIRET du transporteur
-        required: true
-        style: SIMPLE
-        explode: false
-        schema:
-          type: string
+        - name: siret
+          in: path
+          description: SIRET du transporteur
+          required: true
+          style: SIMPLE
+          explode: false
+          schema:
+            type: string
       responses:
         200:
           description: requête réussie
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200_1'
+                $ref: "#/components/schemas/inline_response_200_1"
         400:
           description: Invalid status value
     patch:
       tags:
-      - carrier
+        - carrier
       summary: modification du transporteur
       description: modifie certains attributs du transporteur qui sont spécifiques à A Dock
       operationId: patchCarrier
       parameters:
-      - name: siret
-        in: path
-        description: SIRET du transporteur
-        required: true
-        style: SIMPLE
-        explode: false
-        schema:
-          type: string
+        - name: siret
+          in: path
+          description: SIRET du transporteur
+          required: true
+          style: SIMPLE
+          explode: false
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CarrierPatch'
+              $ref: "#/components/schemas/CarrierPatch"
       responses:
         200:
           description: requête réussie
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200_2'
+                $ref: "#/components/schemas/inline_response_200_2"
         400:
           description: requête non valide
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_400'
+                $ref: "#/components/schemas/inline_response_400"
   /carriers/{siret}/confirm_email/{token}:
     get:
       tags:
-      - carrier
+        - carrier
       summary: confirme l'adresse électronique d'un transporteur
       operationId: confirmCarrierEmail
       parameters:
-      - name: siret
-        in: path
-        description: SIRET du transporteur
-        required: true
-        style: SIMPLE
-        explode: false
-        schema:
-          type: string
-      - name: token
-        in: path
-        description: le token envoyé par courriel
-        required: true
-        style: SIMPLE
-        explode: false
-        schema:
-          type: string
+        - name: siret
+          in: path
+          description: SIRET du transporteur
+          required: true
+          style: SIMPLE
+          explode: false
+          schema:
+            type: string
+        - name: token
+          in: path
+          description: le token envoyé par courriel
+          required: true
+          style: SIMPLE
+          explode: false
+          schema:
+            type: string
       responses:
         200:
           description: requête réussie
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200_3'
+                $ref: "#/components/schemas/inline_response_200_3"
         400:
           description: impossible de confirmer
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_400_1'
+                $ref: "#/components/schemas/inline_response_400_1"
   /carriers/send_code/:
     get:
       tags:
-      - carrier
+        - carrier
       summary: envoie un code de modification à une adresse électronique confirmée
       operationId: sendCarrierCode
       responses:
@@ -237,29 +236,29 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CarrierSendEditCodeResponse'
+                $ref: "#/components/schemas/CarrierSendEditCodeResponse"
         201:
           description: un code de modification a été envoyé par courriel
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CarrierSendEditCodeResponse'
+                $ref: "#/components/schemas/CarrierSendEditCodeResponse"
         409:
           description: impossible quand l'adresse électronique n'est pas confirmée
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CarrierSendEditCodeResponse'
+                $ref: "#/components/schemas/CarrierSendEditCodeResponse"
         503:
           description: impossible d'envoyer le code de modification
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CarrierSendEditCodeResponse'
+                $ref: "#/components/schemas/CarrierSendEditCodeResponse"
   /meta/:
     get:
       tags:
-      - meta
+        - meta
       description: meta données
       operationId: getMeta
       responses:
@@ -268,7 +267,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200_4'
+                $ref: "#/components/schemas/inline_response_200_4"
 components:
   schemas:
     CarrierLight:
@@ -308,10 +307,10 @@ components:
         working_area:
           type: string
           enum:
-          - INTERNATIONAL
-          - FRANCE
-          - REGION
-          - DEPARTEMENT
+            - INTERNATIONAL
+            - FRANCE
+            - REGION
+            - DEPARTEMENT
       xml:
         name: CarrierLight
     Carrier:
@@ -395,10 +394,10 @@ components:
         working_area:
           type: string
           enum:
-          - INTERNATIONAL
-          - FRANCE
-          - REGION
-          - DEPARTEMENT
+            - INTERNATIONAL
+            - FRANCE
+            - REGION
+            - DEPARTEMENT
         working_area_departements:
           type: array
           items:
@@ -409,18 +408,18 @@ components:
           items:
             type: string
             enum:
-            - LOT
-            - PALETTE
-            - URBAIN
-            - VRAC_SOLIDE
-            - VRAC_LIQUIDE
-            - TEMPERATURE
-            - PLATEAU
-            - MULTIMODAL
-            - LOCATION
-            - ANIMAL
-            - VEHICULE
-            - AUTRE
+              - LOT
+              - PALETTE
+              - URBAIN
+              - VRAC_SOLIDE
+              - VRAC_LIQUIDE
+              - TEMPERATURE
+              - PLATEAU
+              - MULTIMODAL
+              - LOCATION
+              - ANIMAL
+              - VEHICULE
+              - AUTRE
         website:
           maxLength: 200
           type: string
@@ -431,8 +430,8 @@ components:
           maxLength: 8
           type: string
           enum:
-          - ENLISTED
-          - LABELLED
+            - ENLISTED
+            - LABELLED
         objectif_co2_begin:
           type: string
           format: date
@@ -448,10 +447,10 @@ components:
         is_locked:
           type: boolean
           description: indique que la fiche est verrouillée
-        subsidiaries:
+        other_facilities:
           type: array
           items:
-            $ref: '#/components/schemas/Subsidiary'
+            $ref: "#/components/schemas/Facility"
       xml:
         name: Carrier
     CarrierPatch:
@@ -465,10 +464,10 @@ components:
         working_area:
           type: string
           enum:
-          - INTERNATIONAL
-          - FRANCE
-          - REGION
-          - DEPARTEMENT
+            - INTERNATIONAL
+            - FRANCE
+            - REGION
+            - DEPARTEMENT
         working_area_departements:
           type: array
           items:
@@ -479,18 +478,18 @@ components:
           items:
             type: string
             enum:
-            - LOT
-            - PALETTE
-            - URBAIN
-            - VRAC_SOLIDE
-            - VRAC_LIQUIDE
-            - TEMPERATURE
-            - PLATEAU
-            - MULTIMODAL
-            - LOCATION
-            - ANIMAL
-            - VEHICULE
-            - AUTRE
+              - LOT
+              - PALETTE
+              - URBAIN
+              - VRAC_SOLIDE
+              - VRAC_LIQUIDE
+              - TEMPERATURE
+              - PLATEAU
+              - MULTIMODAL
+              - LOCATION
+              - ANIMAL
+              - VEHICULE
+              - AUTRE
         website:
           maxLength: 200
           type: string
@@ -503,7 +502,7 @@ components:
           format: int32
       xml:
         name: CarrierPatch
-    Subsidiary:
+    Facility:
       type: object
       properties:
         siret:
@@ -546,7 +545,7 @@ components:
         results:
           type: array
           items:
-            $ref: '#/components/schemas/CarrierLight'
+            $ref: "#/components/schemas/CarrierLight"
         limit:
           type: integer
           description: the number of results if a limit has been applied
@@ -560,11 +559,11 @@ components:
       type: object
       properties:
         carrier:
-          $ref: '#/components/schemas/Carrier'
-        subsidiaries:
+          $ref: "#/components/schemas/Carrier"
+        other_facilities:
           type: array
           items:
-            $ref: '#/components/schemas/Subsidiary'
+            $ref: "#/components/schemas/Facility"
     inline_response_200_2:
       type: object
       properties:
@@ -604,5 +603,5 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/CarrierPatch'
+            $ref: "#/components/schemas/CarrierPatch"
   extensions: {}
